--- a/exampleSite/content/episode/001.md
+++ b/exampleSite/content/episode/001.md
@@ -6,7 +6,7 @@ categories = []
 date = "2020-09-25T04:10:01-05:00"
 episode = "1"
 episode_image = "img/guest/Harold_Clarke.jpg"
-episode_banner = "img/episode/DACRegistration10162020.png"
+#episode_banner = "img/episode/DACRegistration10162020.png"
 explicit = "no"
 #guests = [""]
 sponsors = [""]
