--- a/exampleSite/content/episode/001.md
+++ b/exampleSite/content/episode/001.md
@@ -5,7 +5,7 @@ author = "hclarke"
 categories = []
 date = "2020-09-25T04:10:01-05:00"
 episode = "1"
-episode_image = "img/episode/DACRegistration10162020.png"
+episode_image = "img/guest/Harold_Clarke.jpg"
 #episode_banner = "img/episode/DACRegistration10162020.png"
 explicit = "no"
 #guests = [""]
@@ -21,4 +21,5 @@ youtube = ""
 truncate = ""
 transcript = ""
 eventinfo = "/static/eventinfo/eventinfo1016.txt"
+qr = "img/episode/DACRegistration10162020.png"
 +++
