--- a/exampleSite/content/episode/001.md
+++ b/exampleSite/content/episode/001.md
@@ -21,5 +21,5 @@ youtube = ""
 truncate = ""
 transcript = ""
 eventinfo = "/static/eventinfo/eventinfo1016.txt"
-qr = "/static/qr/DACRegistration10162020.png"
+qr = "/static/qr/registration1016.md"
 +++
