--- a/exampleSite/content/episode/002.md
+++ b/exampleSite/content/episode/002.md
@@ -21,4 +21,5 @@ youtube = ""
 truncate = ""
 eventinfo = "/static/eventinfo/eventinfo1023.txt"
 transcript = ""
+qr = "/static/qr/registration1023.md"
 +++
