--- a/exampleSite/content/episode/003.md
+++ b/exampleSite/content/episode/003.md
@@ -21,4 +21,5 @@ youtube = ""
 truncate = ""
 transcript = ""
 eventinfo = "/static/eventinfo/eventinfo1030.txt"
+qr = "/static/qr/registration1030.md"
 +++
