--- a/exampleSite/content/episode/002.md
+++ b/exampleSite/content/episode/002.md
@@ -16,7 +16,7 @@ podcast_duration = ""
 podcast_file = ""
 podcast_bytes = ""
 tags = []
-title = "Studying Elections in an Era of Unrepresentative Surveys - Christopher Achen"
+title = "Studying Elections in an Era of Unrepresentative Surveys - Christopher Achen  October 22/23, 2020"
 youtube = ""
 truncate = ""
 eventinfo = "/static/eventinfo/eventinfo1023.txt"
