--- a/exampleSite/content/episode/001.md
+++ b/exampleSite/content/episode/001.md
@@ -17,7 +17,7 @@ podcast_duration = ""
 podcast_file = ""
 podcast_bytes = ""
 tags = []
-title = "Will Women Deny Trump a Second Term? Gender and the Political Economy of Presidential Approval - Harold D. Clarke | October 15/16, 2020 | REGISTER"
+title = "Will Women Deny Trump a Second Term? Gender and the Political Economy of Presidential Approval - Harold D. Clarke | October 15/16, 2020"
 youtube = ""
 truncate = ""
 transcript = "" 
