--- a/exampleSite/content/episode/003.md
+++ b/exampleSite/content/episode/003.md
@@ -1,5 +1,5 @@
 +++
-Description = '“The Political Impact of Economic Change” (with Katherine Cramer) uses data from a long-term panel study of people who graduated from high school in 1965 to examine how income mobility and escalating economic inequality have shaped Americans’ partisanship and policy preferences over the past half-century. Overall, this cohort became distinctly more conservative on a variety of economic and social issues and distinctly more Republican, especially during the period of “stagflation” from 1973 through 1982. These conservative shifts were strongly concentrated among upwardly mobile people, not those whose economic fortunes stagnated or declined. The association between upward mobility and Republican partisanship is consistent with the findings of classic studies of class politics, but contrary to much speculation regarding the role of “income stagnation” and “economic distress” in fueling the rise of Donald Trump.'
+Description = ''[ NCHU Announcement 中興大學公告 ](https://www2.nchu.edu.tw/news-detail/id/49725)  <br /> “The Political Impact of Economic Change” (with Katherine Cramer) uses data from a long-term panel study of people who graduated from high school in 1965 to examine how income mobility and escalating economic inequality have shaped Americans’ partisanship and policy preferences over the past half-century. Overall, this cohort became distinctly more conservative on a variety of economic and social issues and distinctly more Republican, especially during the period of “stagflation” from 1973 through 1982. These conservative shifts were strongly concentrated among upwardly mobile people, not those whose economic fortunes stagnated or declined. The association between upward mobility and Republican partisanship is consistent with the findings of classic studies of class politics, but contrary to much speculation regarding the role of “income stagnation” and “economic distress” in fueling the rise of Donald Trump.'
 aliases = ["/3"]
 author = "larrybartels"
 categories = []
