--- a/exampleSite/content/episode/003.md
+++ b/exampleSite/content/episode/003.md
@@ -16,7 +16,7 @@ podcast_duration = ""
 podcast_file = ""
 podcast_bytes = ""
 tags = []
-title = "The Political Impact of Economic Change - Larry Bartels   October 29/30, 2020"
+title = "The Political Impact of Economic Change - Larry Bartels  | October 29/30, 2020"
 youtube = ""
 truncate = ""
 transcript = ""
