--- a/exampleSite/content/episode/005.md
+++ b/exampleSite/content/episode/005.md
@@ -16,7 +16,7 @@ podcast_duration = ""
 podcast_file = ""
 podcast_bytes = ""
 tags = []
-title = "Evidence-based Policy Evaluation - Kosuke Imai   November 12/13, 2020"
+title = "Evidence-based Policy Evaluation - Kosuke Imai  |  November 12/13, 2020"
 youtube = ""
 truncate = ""
 transcript = ""
