--- a/exampleSite/content/episode/004.md
+++ b/exampleSite/content/episode/004.md
@@ -1,5 +1,5 @@
 +++
-Description = ''
+Description = 'Forecasting the 2020 US Elections'
 aliases = ["/4"]
 author = "michaellewisbeck"
 categories = []
