--- a/exampleSite/content/episode/004.md
+++ b/exampleSite/content/episode/004.md
@@ -5,12 +5,12 @@ author = "michaellewisbeck"
 categories = []
 date = "2020-10-22T04:10:01-05:00"
 episode = "4"
-episode_image = "img/guest/MLB450.png"
+episode_image = "img/guest/mclb.png"
 #episode_banner = "img/episode/default-banner.jpg"
 explicit = "no"
 #guests = [""]
 sponsors = [""]
-images = ["img/guest/CLB450.png"]
+images = ["img/guest/mclb.png"]
 news_keywords = []
 podcast_duration = ""
 podcast_file = ""
