--- a/exampleSite/content/episode/1023.md
+++ b/exampleSite/content/episode/1023.md
@@ -17,7 +17,7 @@ podcast_file = ""
 podcast_bytes = ""
 tags = []
 title = "Studying Elections in an Era of Unrepresentative Surveys - Christopher Achen  October 22/23, 2020"
-youtube = "https://youtu.be/Kk034sRFozA"
+youtube = ""
 truncate = ""
 eventinfo = "/static/eventinfo/eventinfo1023.txt"
 transcript = ""
