--- a/exampleSite/content/episode/005.md
+++ b/exampleSite/content/episode/005.md
@@ -1,5 +1,5 @@
 +++
-Description = 'Quantitative social science represents a field of study, in which we collect and analyze data to understand and solve problems in our society.  In this talk, Professor Imai discusses two of his own ongoing research projects that illustrate how to use scientific evidence for the evaluation of public policies.  One project is about the detection of gerrymandering in legislative redistricting.  This study shows how to determine whether a proposed redistricting plan is an outlier in terms of partisan or racial fairness dimensions by simulating an ensemble of alternative plans that satisfy the required legal constraints.  Second, he will demonstrate how to use a randomized experiment for evaluating the impacts of Artificial Intelligence on judicial decision-making.  This project provides an empirical assessment of the predispositional safety assessment instruments that are widely used in in the US criminal justice system and yet controversial from the perspective of racial fairness.'
+Description = '[ NCHU Announcement 中興大學公告 ](https://www2.nchu.edu.tw/news-detail/id/49752)  <br />  Quantitative social science represents a field of study, in which we collect and analyze data to understand and solve problems in our society.  In this talk, Professor Imai discusses two of his own ongoing research projects that illustrate how to use scientific evidence for the evaluation of public policies.  One project is about the detection of gerrymandering in legislative redistricting.  This study shows how to determine whether a proposed redistricting plan is an outlier in terms of partisan or racial fairness dimensions by simulating an ensemble of alternative plans that satisfy the required legal constraints.  Second, he will demonstrate how to use a randomized experiment for evaluating the impacts of Artificial Intelligence on judicial decision-making.  This project provides an empirical assessment of the predispositional safety assessment instruments that are widely used in in the US criminal justice system and yet controversial from the perspective of racial fairness.'
 aliases = ["/5"]
 author = "kosukeimai"
 categories = []
