--- a/exampleSite/content/episode/1016.md
+++ b/exampleSite/content/episode/1016.md
@@ -18,7 +18,7 @@ podcast_file = ""
 podcast_bytes = ""
 tags = []
 title = "Will Women Deny Trump a Second Term? Gender and the Political Economy of Presidential Approval - Harold D. Clarke | October 15/16, 2020"
-youtube = ""
+youtube = "gEnpigFNhng&t=2s"
 truncate = ""
 transcript = "" 
 eventinfo = "/static/eventinfo/eventinfo1016.txt"
