--- a/exampleSite/content/episode/004.md
+++ b/exampleSite/content/episode/004.md
@@ -1,5 +1,5 @@
 +++
-Description = 'In forecasting US presidential elections, there are different scientific approaches. First, there are structural models of political scientists that offer theory-driven regression equations . However, the most popular approach involves poll watching, led by data journalists who mine vote intention surveys. . Finally, there are lesser known, but promising methods, such as citizen forecasting.  In this presentation, we consider the well-known Political Economy Model, using it as a basis of comparison with The Economist Model, which relies mainly on voter intentions. We contrast both these approaches to a citizen forecasting experiment based on a state-by-state survey of voter expectations. By way of conclusion, these approaches are evaluated in light of the 2020 presidential election results.'
+Description = '[ NCHU Announcement 中興大學公告 ](https://www2.nchu.edu.tw/news-detail/id/49750)  <br /> In forecasting US presidential elections, there are different scientific approaches. First, there are structural models of political scientists that offer theory-driven regression equations . However, the most popular approach involves poll watching, led by data journalists who mine vote intention surveys. . Finally, there are lesser known, but promising methods, such as citizen forecasting.  In this presentation, we consider the well-known Political Economy Model, using it as a basis of comparison with The Economist Model, which relies mainly on voter intentions. We contrast both these approaches to a citizen forecasting experiment based on a state-by-state survey of voter expectations. By way of conclusion, these approaches are evaluated in light of the 2020 presidential election results.'
 aliases = ["/4"]
 author = "michaellewisbeck"
 categories = []
