--- a/exampleSite/content/episode/1106.md
+++ b/exampleSite/content/episode/1106.md
@@ -17,7 +17,7 @@ podcast_file = ""
 podcast_bytes = ""
 tags = []
 title = "Forecasting the 2020 US Elections - Michael Lewis-Beck and Colin Lewis-Beck  |  November 5/6, 2020"
-youtube = ""
+youtube = "WJ2Idy-vin4"
 truncate = ""
 transcript = ""
 eventinfo = "/static/eventinfo/eventinfo1106.txt"
