--- a/exampleSite/content/episode/006.md
+++ b/exampleSite/content/episode/006.md
@@ -1,5 +1,5 @@
 +++
-Description = 'Recently, Pfizer pharmaceutical company announced promising results from late-stage trails of an RNA based vaccine designed to induce immunity against COVID-19.  For many, this evoked thoughts of the "beginning of the end" of this unprecedented global public health crisis. However, even the best of vaccines will be useless if people are unwilling to submit to inoculations.  Just as fast as Pfizer announced the results, "anti-vaxxers" began questioning the safety of this new type of vaccine, and recent news reports suggest at least 35% of the British public are deeply concerned about potential side effects of a COVID (and other) vaccines.  In short, the way out of this public health crisis is part biomedical and part social science.'
+Description = '[ NCHU Announcement 中興大學公告 ](https://www2.nchu.edu.tw/news-detail/id/49917)  <br /> Recently, Pfizer pharmaceutical company announced promising results from late-stage trails of an RNA based vaccine designed to induce immunity against COVID-19.  For many, this evoked thoughts of the "beginning of the end" of this unprecedented global public health crisis. However, even the best of vaccines will be useless if people are unwilling to submit to inoculations.  Just as fast as Pfizer announced the results, "anti-vaxxers" began questioning the safety of this new type of vaccine, and recent news reports suggest at least 35% of the British public are deeply concerned about potential side effects of a COVID (and other) vaccines.  In short, the way out of this public health crisis is part biomedical and part social science.'
 aliases = ["/6"]
 author = "thomasscotto"
 categories = []
