--- a/exampleSite/content/episode/007.md
+++ b/exampleSite/content/episode/007.md
@@ -1,5 +1,5 @@
 +++
-Description = "Research shows that new information about the likely future policy direction of government can affect financial markets. So too can unexpected events, such as armed conflict or terrorist attacks. We build on existing research in two ways. First, we contend that news about a government’s resolve to follow through with their stated policies should also affect financial markets. We test this argument using data on President Donald Trump’s Mexico-related policy tweets both before and after he became president, finding that exchange rate volatility increases in response to policy tweets, but only at certain times. Second, we theorize that government policy responses to major events can affect financial markets, particularly if the government lacks a strong policy direction. To make this case, we examine President Trump’s speeches related to the Covid-19 pandemic, and show that his early denials aggravated negative financial market reactions. Both of these findings suggest that while elites affect financial markets, they do so in complex ways."
+Description = "[ NCHU Announcement 中興大學公告 ](https://www2.nchu.edu.tw/news-detail/id/49925)  <br /> Research shows that new information about the likely future policy direction of government can affect financial markets. So too can unexpected events, such as armed conflict or terrorist attacks. We build on existing research in two ways. First, we contend that news about a government’s resolve to follow through with their stated policies should also affect financial markets. We test this argument using data on President Donald Trump’s Mexico-related policy tweets both before and after he became president, finding that exchange rate volatility increases in response to policy tweets, but only at certain times. Second, we theorize that government policy responses to major events can affect financial markets, particularly if the government lacks a strong policy direction. To make this case, we examine President Trump’s speeches related to the Covid-19 pandemic, and show that his early denials aggravated negative financial market reactions. Both of these findings suggest that while elites affect financial markets, they do so in complex ways."
 aliases = ["/7"]
 author = "andyphilips"
 categories = []
