--- a/exampleSite/content/episode/1119.md
+++ b/exampleSite/content/episode/1119.md
@@ -17,7 +17,7 @@ podcast_file = ""
 podcast_bytes = ""
 tags = []
 title = "Vaccine Scepticism and the British Public:  Developing Measurement Models for Policy Interventions - Thomas Scotto, November 18|19, 2020"
-youtube = ""
+youtube = "CbDgS5IAYN8"
 truncate = ""
 transcript = ""
 eventinfo = "/static/eventinfo/eventinfo1118.txt"
