Update and rename 007.md to 1204.md

--- a/exampleSite/content/episode/1204.md
+++ b/exampleSite/content/episode/1204.md
@@ -17,7 +17,7 @@ podcast_file = ""
 podcast_bytes = ""
 tags = []
 title = "Do Elites Really Affect Financial Markets? - Andrew Q. Philips  |  December 3/4, 2020"
-youtube = ""
+youtube = "0c4uprm4qQ4"
 truncate = ""
 transcript = ""
 eventinfo = "/static/eventinfo/eventinfo1204.txt"
