--- a/exampleSite/content/episode/1211.md
+++ b/exampleSite/content/episode/1211.md
@@ -17,7 +17,7 @@ podcast_file = ""
 podcast_bytes = ""
 tags = []
 title = "Modeling Dynamic Pies: recent advances in the modeling of dynamic compositional outcomes - Guy D. Whitten, December 10|11, 2020"
-youtube = ""
+youtube = "4wgHxl1vs5U"
 truncate = ""
 transcript = ""
 eventinfo = "/static/eventinfo/eventinfo1211.txt"
